<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AI 대시보드</string>
    <string name="schedule_widget_title">스케줄</string>
    <string name="favorites_widget_title">즐겨찾기</string>
    <string name="schedule_widget_desc">대시보드 스케줄을 홈 화면에서 달력으로 봅니다</string>
    <string name="favorites_widget_desc">즐겨찾기한 메뉴를 홈 화면에서 바로 엽니다</string>
    <string name="schedule_empty">표시할 일정이 없습니다</string>
    <string name="favorites_empty">즐겨찾기한 메뉴가 없습니다</string>
    <string name="need_login">앱을 열어 로그인한 뒤 새로고침하세요</string>
    <string name="refresh">새로고침</string>
    <string name="add_schedule">일정 추가</string>
    <string name="prev_month">지난달</string>
    <string name="next_month">다음달</string>
    <string name="prev_week">지난주</string>
    <string name="next_week">다음주</string>
    <string name="today">오늘</string>
    <string name="view_timetable">시간표</string>
    <string name="view_calendar">달력</string>
    <string name="view_day">하루</string>
    <string name="view_week">주간</string>
    <string name="back_to_calendar">달력으로</string>
    <string name="day_empty">이 날은 일정이 없어요\n＋ 를 눌러 추가하세요</string>
    <string name="toggle_done">완료 표시</string>
</resources>
